[package]
name = "niv"
version = "0.0.1"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
thiserror = "1.0.23"
wita = "0.3.2"
com_ptr = "0.2.0"
serde_json = "1.0.61"
log = "0.4.13"
image = "0.23.12"
num_cpus = "1.13.0"
simplelog = "0.9.0"

[dependencies.serde]
version = "1.0.122"
features = ["derive"]

[dependencies.winapi]
version = "0.3.9"
features = [
    "objbase",
    "shobjidl",
    "shobjidl_core",
    "d2d1_1",
    "dwrite",
    "dxgi",
    "impl-default"
]

[dependencies.tokio]
version = "1.1.0"
features = [
    "rt",
    "rt-multi-thread",
    "sync",
]

[profile.dev.package.image]
opt-level =  3
debug = false
